feat: [IOPID-1540] Adopt the new DS to `IdentificationModal` (#5581)
## Short description
This PR addresses the redesign of the `IdentificationModal` by adopting
the new DS.

> [!TIP]
> Review Privacy ✅
> [MP
event](https://pagopa.atlassian.net/wiki/spaces/CM1/pages/873758721/TPR+Identificazione+PIN+BIO)
✅
> Translations ✅
>
> [![Run e2e
tests](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml/badge.svg?branch=IOPID-1540-authentication-modal)](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml)

> [!Warning]
> The little lock icon (🔒) in the `IdentificationModal` layout is the
`DevMode` button for fast pin inserting. It's not shown on production
builds.

## List of changes proposed in this pull request
- Adopt of the new DS to `IdentificationModal`
- Adopt of the new DS to `IdentificatioLocknModal`
- Make use of a new persisted field in `IdentificationFailData`, for
which there is a new `redux-persist` migration with its corresponding
unit tests.
- Add CMX properties to `IDENTIFICATION_SUCCESS` event according to
[this](https://pagopa.atlassian.net/wiki/spaces/CM1/pages/873758721/TPR+Identificazione+PIN+BIO#%F0%9F%94%84-Eventi-gi%C3%A0-tracciati-da-modificare).
- Make use of `useAppBackgroundAccent` to get the blue color of the DS.
- `ToastNotification` is sticky in the layout because `<Modal>`s will
cover the `IOToast` one. `<Modal>`s cover everything that is not inside
their layout.


<details><summary>🎦 Demo 🎦</summary>
<p>

| Android a11y  | iOS a11y  | 
| - | - | 
| <video
src="https://github.com/pagopa/io-app/assets/16268789/d84c87dc-a5c9-464d-85b6-a06ca9317042"
/> | <video
src="https://github.com/pagopa/io-app/assets/16268789/3a4239bf-c997-4e48-ab8f-513cc25902ca"
/> |

| Android `auth`  | iOS `auth`  | 
| - | - | 
| <video
src="https://github.com/pagopa/io-app/assets/16268789/990d4c4d-14d7-4815-aa5e-ef6cb2a2807f"
/> | <video
src="https://github.com/pagopa/io-app/assets/16268789/50ac4a

--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -1997,16 +1997,13 @@ serviceDetail:
   disabled: "deaktiviert"
   notValidated: "Um die E-Mail-Weiterleitung zu aktivieren, musst du deine E-Mail-Adresse bestätigen."
 identification:
-  title: "Hallo!"
+  title: "Hallo {{name}}!"
   titleProfileName: "Hallo {{profileName}}!"
   titleValidation: "Bestätige den Vorgang"
   logout: "Abmelden"
   logoutProfileName: "Du bist nicht {{profileName}}?"
   logoutDescription: "Du kannst dich mit deinem SPID oder deiner CIE anmelden. Diese Sitzung wird abgemeldet."
-  logoutDescriptionProfileName: "Du kannst dich mit deinem SPID oder deiner CIE anmelden. Die Sitzung von {{profileName}} wird abgemeldet."
-  subtitleCode: "Gib deinen Entsperrcode ein"
-  subtitleCodeFingerprint: "Verwende den Fingerabdruck oder gib den Entsperrcode ein"
-  subtitleCodeFaceId: "Verwende FaceID oder gib den Entsperrcode ein"
+  logoutDescriptionProfileName: "Du kannst dich mit deinem SPID oder deiner CIE anmelden. Die Sitzung von {{profileName}} wird abgemeldet."  
   biometric:
     fingerprintType: "Fingerabdruck"
     title: "Biometrische Identifikation"
@@ -2014,10 +2011,7 @@ identification:
       reason: "Identifikation durch TouchID fehlgeschlagen"
       title: "Identifikation erforderlich"
       sensorDescription: "Berührungssensor"
-  fail:
-    remainingAttempts: "Du hast noch {{attempts}} Versuche übrig."
-    remainingAttemptSingle: "Du hast noch einen Versuch übrig."
-    tooManyAttempts: "Zu viele falsche Versuche."
+  fail:        
     waitMessage: "Versuche es erneut in:"
   unlockCode:
     accessibility:
