feat: [IOPID-1566,IOPID-1567,IOPID-1570] Adopt the new DS to FL modals (#5614)
## Short description
This PR addresses the redesign of **FastLogin Modals** by adopting the
new DS.

> [!TIP]
> Review Privacy ✅
> Translations ✅
>
> [![Run e2e
tests](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml/badge.svg?branch=IOPID-1566-IOPID-1567-IOPID-1570-adopt-new-ds-to-fl-modals)](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml)

## List of changes proposed in this pull request
- Rename `AskUserInteractionScreen` to `AskUserInteractionScreen`,
removing the "r" typo.
- Adopt of the new DS to `AskUserInteractionScreen` through
`OperationResultScreenContent`.
- This addresses all the three modals of FL refresh flow (with pin,
without pin, and transient error).
- Update tests to fit the new `AskUserInteractionScreen` UI.
- Remove the countdown and close button feature because they've been
never used.


<details><summary>🎦 Demo 🎦</summary>
<p>

| 🤖 session refresh error | 🤖 no pin session expiration | 🤖 with pin
session expiration |
| - | - | - |
| <video
src="https://github.com/pagopa/io-app/assets/16268789/de24d1ed-fb7c-44a4-8216-820ba729689e"
/> | <video
src="https://github.com/pagopa/io-app/assets/16268789/d96e7c45-9f39-4699-8bde-77400c50a0dd"
/> | <video
src="https://github.com/pagopa/io-app/assets/16268789/f7443490-66d2-421e-ad44-06cd71678372"
/> |

| 🍏 session refresh error | 🍏 no pin session expiration | 🍏 with pin
session expiration |
| - | - | - |
| <video
src="https://github.com/pagopa/io-app/assets/16268789/e070aba3-83d3-4fb0-a103-524c1fa76244"
/> | <video
src="https://github.com/pagopa/io-app/assets/16268789/0d1e1751-6af4-4974-9e17-f269a5dfb975"
/> | <video
src="https://github.com/pagopa/io-app/assets/16268789/37f24c3d-d857-4378-9194-198818c82f48"
/> |
</p>

</details> 

## How to test
- Test FL session refresh during a first onboarding where you didn't
have set your pin yet (**TIP** w

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -3477,10 +3477,10 @@ fastLogin:
         subtitle: For security reasons, you must authenticate again with SPID or CIE. You can then resume IO configuration from where you left off.
         submitButtonTitle: Continue
       continueNavigation:
-        title: "La tua sessione è scaduta"
-        subtitle: "Per continuare a utilizzare l’app premi su Continua la navigazione."
-        submitButtonTitle: "Continua la navigazione"
-        cancelButtonTitle: "Annulla"
+        title: "Your session has expired"
+        subtitle: "Please log in to continue using the app"
+        submitButtonTitle: "Log in"
+        cancelButtonTitle: "Cancel"
       transientError:
         title: "We couldn't authenticate you"
         subtitle: "Close the app and try again in a few minutes."
