--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -562,8 +562,13 @@ authentication:
       title: La tua sessione è scaduta
       body: Per ragioni di sicurezza, ti chiediamo di entrare con SPID o CIE ogni {{days}} giorni o se esci dall’app.
     cie_unsupported:
-      title: Accesso con CIE non disponibile
-      body: !include cie/cieNotSupported.md
+      title: Non puoi entrare con CIE
+      body: Il dispositivo che stai utilizzando non supporta l’accesso con Carta d’Identità Elettronica (CIE).
+      button: Ho capito
+      nfc_problem: Per leggere la CIE è necessario un dispositivo con chip NFC.
+      os_problem: È richiesto un sistema operativo Android 6.0 o iOS 13 o superiori.
+      nfc_alert: Il tuo dispositivo non ha l'NFC.
+      os_alert: Il sistema operativo del dispositivo non è aggiornato.
       android_desc: !include cie/cieNotSupported_android.md
       os_version_unsupported: un sistema operativo Android 6.0 o superiore
       nfc_incompatible: un chip NFC compatibile
