feat: [IOPID-1541,IOPID-1542] Adopt the new DS to `RootedModal` (#5641)
## Short description
This PR addresses the redesign of **RootedModal** by adopting the new
DS.

> [!TIP]
> Review Privacy ✅
> Translations ✅
>
> e2e: TODO

<details><summary>🎦 Demo 🎦</summary>
<p>

| Nexus 5 with Kali (some translations are missing) | 
| - |
| <video
src="https://github.com/pagopa/io-app/assets/16268789/f4c267a2-9265-4fa1-9688-3d9b48b12b3b"
/>

| 🤖 a11y screen | 🤖 a11y bottom sheet |  
| - | - | 
| <video
src="https://github.com/pagopa/io-app/assets/16268789/774c1a70-bbe0-46ec-abf2-e31d68614846"
/> | <video
src="https://github.com/pagopa/io-app/assets/16268789/26cd87e9-b59b-4e5c-9883-d71ddb77caff"
/> |

| 🍏 a11y screen | 🍏 a11y bottom sheet |  
| - | - | 
| <video
src="https://github.com/pagopa/io-app/assets/16268789/8fd0d4af-2106-4d0c-8118-352090b12e94"
/> | <video
src="https://github.com/pagopa/io-app/assets/16268789/3b3648b6-8fe0-48b4-b102-e1689aa0ae0a"
/> |

</p>
</details> 

## List of changes proposed in this pull request
- Remove unused images.
- Change markdown according to Figma
([Android](https://www.figma.com/file/hfNTDuzZ0QEiVZVuT3UB7d/Errori-in-app?type=design&node-id=260-3355&mode=design&t=vXBOnwNFbfeK3Iv9-4),
[iOS](https://www.figma.com/file/hfNTDuzZ0QEiVZVuT3UB7d/Errori-in-app?type=design&node-id=260-3436&mode=design&t=vXBOnwNFbfeK3Iv9-4))
- Transform the `RootedModal` from a **legacy modal** to a **navigation
screen modal**.

## How to test
In case of no jailbroken or rooted device, just set `const
isRootedOrJailbrokenFromJailMonkey = true` on the first render hook and
check on both Android and iOS that the screen is shown correctly.
- If you click on "learn more" you should see an informative
bottomsheet.
- If you exit the app, without tapping on "continue", when you restart
the app you should see the modal again.
- If you click on "continue", the modal should go away and restarting
the app you should see i

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -214,6 +214,11 @@ tablet:
   message: The IO interface is optimized for smartphones, but all the functions compatible with your device are still available.
 rooted:
   title: Looks like the security of your device has been compromised!
+  body: If you press 'Continue', you agree to continue browsing at your own risk, otherwise close the app.
+  learnMoreButton: 
+    title: What does it mean?
+  learnMoreBottomsheet:
+    title: Device security
   bodyiOS: !include jailbroken_body.md
   bodyAndroid: !include rooted_body.md
   continueAlert:
