feat: [IOPID-1611] Adopt new DS on CIE not supported modal (#5647)
## Short description
Integrate new DS on CIE not supported modal

## List of changes proposed in this pull request
- Integrate new DS on CIE not supported modal
- transform CIE not supported modal in native stack modal

## Test

> [!TIP]
> [![Run e2e
tests](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml/badge.svg?branch=IOPID-1611-ds-modal-cie-access-v2)](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml)


### Accessibility Test
<p>

| 🍏 A11Y iOS 🍏 | 🤖 A11Y Android 🤖 |
| - | - | 
| <video
src="https://github.com/pagopa/io-app/assets/83651704/f96ffa6a-900e-47d2-82de-d7b23450d0d1"
/> | <video
src="https://github.com/pagopa/io-app/assets/83651704/3324a76a-a959-4c5d-bff4-5a5d28e8b1c3"
/> |

</p>


## How to test
On _.env_ file set `CIE_LOGIN_WITH_DEV_SERVER_ENABLED=NO`
Run the application and on the landing screen select CIE as login mode

---------

Co-authored-by: Fabio Bombardi <16268789+shadowsheep1@users.noreply.github.com>

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -567,11 +567,13 @@ authentication:
       title: Your session is expired
       body: For security reasons, we ask you to log in with SPID or CIE every {{days}} days or if you log out
     cie_unsupported:
-      title: Login with CIE unavailable
-      body: !include cie/cieNotSupported.md
-      android_desc: !include cie/cieNotSupported_android.md
-      os_version_unsupported: an Android 6.0 or higher operating system
-      nfc_incompatible: a NFC chip
+      title: Non puoi entrare con CIE
+      body: Il dispositivo che stai utilizzando non supporta l’accesso con Carta d’Identità Elettronica (CIE).
+      button: Ho capito
+      nfc_problem: Per leggere la CIE è necessario un dispositivo con chip NFC.
+      os_problem: È richiesto un sistema operativo Android 6.0 o iOS 13 o superiori.
+      nfc_alert: Il tuo dispositivo non ha l'NFC.
+      os_alert: Il sistema operativo del dispositivo non è aggiornato.
     contentTitleCie: Don't have SPID or CIE?
     cie_information_request: !include cie.md
     spid_or_cie: To use IO you must have one of these digital tools, which certify your identity.
