--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -215,7 +215,7 @@ tablet:
 rooted:
   title: Sembra che la sicurezza del tuo dispositivo sia compromessa!
   body: Se premi su ‘Continua’, accetti di proseguire a tuo rischio nella navigazione, altrimenti chiudi l’app.
-  learnMoreButton: 
+  learnMoreButton:
     title: Cosa significa?
   learnMoreBottomsheet:
     title: Sicurezza del dispositivo
@@ -802,16 +802,16 @@ email:
     label: Indirizzo email personale
     alert:
       title: "{{email}} è già in uso, inseriscine un’altra."
-      description1: Email già in uso 
+      description1: Email già in uso
       description2: Inserisci un indirizzo diverso da quello attuale
       description3: Stai già usando questa email
-      invalidemail: Inserisci un indirizzo email valido 
+      invalidemail: Inserisci un indirizzo email valido
       modaltitle: Questa email è già in uso
       modaldescription: Può succedere se condividi lo stesso indirizzo con un familiare
       modalbutton: Usa un’altra email
   edit:
     title: Modifica la tua email
-    subtitle: Ora stai usando 
+    subtitle: Ora stai usando
     validated: L'email che avevi inserito e validato in precedenza è
     label: Nuovo indirizzo email personale
     cta: Modifica email
@@ -834,7 +834,7 @@ email:
     title: Ti abbiamo inviato un’email
     subtitle: Per confermare il tuo indirizzo, segui le istruzioni che abbiamo inviato a
     link: Non è corretto?
-    countdowntext: Richiedi una nuova email tra 
+    countdowntext: Richiedi una nuova email tra
     buttonlabelsent: Email inviata!
     buttonlabelsentagain: Invia di nuovo l’email
     toast: Fatto! Controlla la tua casella di posta.
@@ -937,18 +937,6 @@ datetimes:
   todayAt: oggi, alle
   notValid: Data non valida.
 payment:
-  homeScreen:
-    title: Pagamenti
-    methodsSection:
-      header: Metodi di pagamento
-      headerCTA: Aggiungi
-    historySection:
-      header: Storico operazioni
-      headerCTA: Vedi tutte
-      transactionStatusBadges:
-        failure: "FALLITA"
-        success: ""
-    CTA: Paga un avviso
   alertNoPaymentMethods:
     title: Aggiungi un metodo per effettuare pagamenti in app
     message: Il metodo verrà salvato nel Portafoglio, così la prossima volta potrai pagare più facilmente.
@@ -2928,6 +2916,24 @@ features:
         cgn: Carta Giovani Nazionale
         itw: IT Wallet
         payment: Metodo di pagamento
+  payments:
+    title: Pagamenti
+    cta: Paga un avviso
+    methods:
+      title: Metodi di pagamento
+      button: Aggiungi
+      banner:
+        content: Aggiungi al portafoglio un metodo di pagamento, così non dovrai inserire ogni volta i dati.
+        action: Aggiungi un metodo
+    transactions:
+      title: Storico operazioni
+      button: Vedi tutte
+      empty:
+        title: Qui vedrai le tue ricevute pagoPA
+        content: Paga un avviso in app o presso un qualsiasi canale abilitato a pagoPA.
+      status:
+        failure: FALLITA
+        success: ""
 webView:
   error:
     missingParams: Non sono presenti le informazioni necessarie per accedere a questa pagina
