fix: [IOPID-1714] IOS crashes on EIC malformed URLs (#5660)
## Short description
> [!Warning]
> This PR depends on https://github.com/pagopa/io-cie-sdk/pull/51

> [!Important]
> The misleading copy on the error page under the NFC Session Manager is
not a subject of this PR.

> [!Tip]
> Translations ✅


This PR update the `io-cie-sdk` library to handle malformed responses to
avoid crashes on iOS devices in those use cases.

<details><summary>demo</summary>
<p>

| Generic error on iOS NFC Session Manager Alert |
| - |
| <video
src="https://github.com/pagopa/io-app/assets/16268789/22d3ba0b-d1a4-46c9-aeaf-9eac1f7cdd5c"
/> |

</p>
</details> 

## List of changes proposed in this pull request
- Fix UI regression in `LoadingSpinnerOverlay`.
- Add a generic error message in case of malformed URLs.

## How to test
Run the app in production with a real iOS device and try to login with
EIC several times. No crash'd happen.

---------

Co-authored-by: mariateresaventura <90319761+mariateresaventura@users.noreply.github.com>
Co-authored-by: Mario Perrotta <mario.perrotta@pagopa.it>

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -661,6 +661,7 @@ authentication:
         cardLocked: CIE card locked
         wrongPin1AttemptLeft: Wrong PIN, you still have 1 attempt
         wrongPin2AttemptLeft: Wrong PIN, you still have 2 attempts
+        genericError: Something went wrong! Please try again.
       error:
         readerCardLostTitle: Hold the card again for a few seconds
         readerCardLostTitleiOS: You removed the card too soon.
