--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -836,8 +836,8 @@ email:
     title: We have sent you an email
     subtitle: To confirm your address, follow the instructions we have sent to
     link: Isn't that right?
-    buttonlabelsent: Email sent!    
-    countdowntext: Request new email in 
+    buttonlabelsent: Email sent!
+    countdowntext: Request new email in
     buttonlabelsentagain: Send email again
     toast: Done! Check your mailbox.
   newvalidemail:
@@ -2935,7 +2935,7 @@ features:
         bonus: Iniziative welfare
         cgn: Carta Giovani Nazionale
         itw: IT Wallet
-        payment: Metodo di pagamento
+        payment: Payment methods
 webView:
   error:
     missingParams: Not all information necessary to access this page are available
