--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -2490,7 +2490,7 @@ bonus:
       online: Online
       places: Luoghi
       navigationTitle: Agevolazioni
-      screenTitle: Seleziona un operatore e scopri agevolazioni e opportunità
+      screenTitle: Scopri le proposte
       cta:
         filter: Filtra
       categoriesList:
