--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -2936,6 +2936,12 @@ features:
         cgn: Carta Giovani Nazionale
         itw: IT Wallet
         payment: Metodi di pagamento
+    onboarding: 
+      title: Cosa vuoi aggiungere al portafoglio?
+      options: 
+        cgn: Carta Giovani Nazionale
+        welfare: Iniziative welfare
+        payments: Metodi di pagamento
 webView:
   error:
     missingParams: Non sono presenti le informazioni necessarie per accedere a questa pagina
