--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -269,8 +269,8 @@ startup:
   contextualHelp:
     title: Startup problems?
 login:
-  expiration_info: For security reasons, you’ll need to sign in again with CIE or SPID every 30 days.
-  expiration_info_FL: For security reasons, you’ll need to sign in again with CIE or SPID yearly.
+  expiration_info: Per ragioni di sicurezza, dovrai entrare con SPID o CIE ogni 30 giorni.
+  expiration_info_FL: Per ragioni di sicurezza, dovrai entrare con SPID o CIE una volta all’anno.
   biometric_info: To sign in, you'll only need to enter your unlock code or, if enabled, use your fingerprint or face.
 inbox:
   enableButton: Enable Inbox
