chore: [IOPAE-1050] Add service preferences to `ServiceDetailsScreen` (#5658)
This PR depends on https://github.com/pagopa/io-app/pull/5642

## Short description
This PR adds the preferences section in the service details screen.

<details open><summary>Details</summary>
<p>

| preferences  |
| - |
| <video
src="https://github.com/pagopa/io-app/assets/29163287/709c75b9-0728-49bf-b942-01c9f0937a57"
width="300"/> |

</p>
</details> 

## List of changes proposed in this pull request
- moved service reducers to the _/features/services/store/reducers/_
folder
- moved service sagas to the _/features/services/saga/_ folder
- moved service actions to the _/features/services/store/actions/_
folder
- added ServiceDetailsPreferences component
- added ServicePreferenceListItemSwitch component
- updated ServiceDetailsScreen in order to display service preferences
via ServiceDetailsPreferences

## How to test
Using `io-dev-api-server`, navigate to the services tab and tap a
service. Check that the screen is displayed correctly.
_Note: the inbox switch is disabled if the selected service is special._

---------

Co-authored-by: Fabio Bombardi <16268789+shadowsheep1@users.noreply.github.com>
Co-authored-by: Andrea <andrea.piai@pagopa.it>
Co-authored-by: Alice Di Rico <83651704+Ladirico@users.noreply.github.com>

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -2088,6 +2088,11 @@ services:
       subtitle: "We are retrieving service details"
       back: "Back"
       retry: "Retry"
+    preferences:
+      title: "This service can"
+      inbox: "Contact you in app"
+      pushNotifications: "Send you push notifications"
+      messageReadStatus: "Receive read receipts"
 serviceDetail:
   fiscalCode: "Organization's fiscal code"
   fiscalCodeAccessibility: "Organization's fiscal code"
