chore: add memory information to zendesk request

--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -2374,7 +2374,8 @@ support:
     navigationData: "IO-App Navigationsdaten"
     navigationDataValue: "z.B. der letzte Bildschirm oder die letzte in der IO-App angezeigte Nachricht"
     devicePerformance: "Leistung des Geräts"
-    devicePerformanceData: "Speicher und Akkustand"
+    devicePerformanceDataAndroid: "Speicher und Akkustand"
+    devicePerformanceDataiOS: "Speicher ({{storage}} GB) und Akkustand"
     stock: "Daten zur Zahlungsaufforderung"
     stockValue: "Einschließlich des Fehlers, den du gerade erhalten hast"
     card: "Angaben zur Zahlungsmethode"
