--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -455,6 +455,9 @@ profile:
         title: Warning
         message: To add a new test card, you must enable the pagoPA test environment from the settings.
         closeButton: Close
+    itWallet:
+      itWalletTest: IT Wallet
+      itWalletTestDescription: Enable the IT Wallet test environment
   data:
     title: Your data
     subtitle: Here you will find your personal and contact data used by the IO app.
