feat: [IOPID-1568] Integrate new DS on email validation block screen (#5673)
> [!Warning]
> This PR depends on https://github.com/pagopa/io-app/pull/5670

## Short description
Add new DS on email validation screen 

## Test 

### E2E
> [!Tip]
>[![Run e2e
tests](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml/badge.svg?branch=IOPID-1568-ds-modal-validate-email)](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml)

### A11Y
<p>

| 🍏 A11Y iOS 🍏 | 🤖 A11Y Android 🤖 |
| - | - | 
| <video
src="https://github.com/pagopa/io-app/assets/83651704/8a278c16-7d18-41ec-aa65-d1035074cf19"
/> | <video
src="https://github.com/pagopa/io-app/assets/83651704/82273480-1136-4729-8313-c50e9cfba277"
/> |

</p>

## How to test
Run the application and in io-dev-api-server add is_email_validated:
false

---------

Co-authored-by: Fabio Bombardi <16268789+shadowsheep1@users.noreply.github.com>
Co-authored-by: mariateresaventura <90319761+mariateresaventura@users.noreply.github.com>

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -762,10 +762,10 @@ authentication:
 email:
   cduScreens:
     validateMail:
-      title: Email address not validated
-      subtitle: To continue using the app, you must validate your email address
-      editButton: Edit email address
-      validateButton: Validate email address
+      title: Is this your email?
+      subtitle: To continue using the app, you must confirm that your email is
+      editButton: No, change email
+      validateButton: Yes, confirm
       header:
         title: Configure IO
       help:
