chore: [IOPAE-1048,IOPAE-1049,IOPAE-1051] Adopt the new DS on `ServiceDetailsScreen` (#5677)
## Short description
This PR updates the service details introducing the footer (special cta
+ standard ctas), the metadata and the tos&privacy sections.

<details open><summary>Details</summary>
<p>

| without ctas  | with ctas  |
| - | - |
| <video
src="https://github.com/pagopa/io-app/assets/29163287/b6b1e5ff-83d6-4be7-bb56-1bae553bf0b8"
width="300"/> | <video
src="https://github.com/pagopa/io-app/assets/29163287/32e5e218-24bb-4d76-a698-54fdfc675c9b"
width="300"/> |

| custom flow pn  | custom flow cgn  |
| - | - |
| <video
src="https://github.com/pagopa/io-app/assets/29163287/da011192-47a9-42b2-913c-06d8d61222a4"
width="300"/> | <video
src="https://github.com/pagopa/io-app/assets/29163287/6f370405-896c-451c-b533-aa78f2682cd1"
width="300"/> |

</p>
</details> 

## List of changes proposed in this pull request
- added `ServiceDetailsTosAndPrivacy` component to display Tos&Privacy
section
- added `ServiceDetailsMetadata` component to display metadata section
- added `ServiceDetailsFooterActions` component to display footer: this
component allows to display the **custom cta** for special services or
the **standard ctas**.
- updated the cta for the `pn` and `cgn` flows
- updated langs

## How to test
Using `io-dev-api-server`, navigate to the services tab and tap a
service. Check that the screen is displayed correctly.

---------

Co-authored-by: Alice Di Rico <83651704+Ladirico@users.noreply.github.com>

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -2096,6 +2096,21 @@ services:
       inbox: "Contact you in app"
       pushNotifications: "Send you push notifications"
       messageReadStatus: "Receive read receipts"
+    metadata:
+      title: "Contacts and info"
+      website: "Browse Website"
+      downloadApp: "Download app"
+      support: "Get support"
+      phone: "Contact the institution"
+      email: "Send email"
+      pec: "Send PEC"
+      fiscalCode: "Organization's fiscal code"
+      address: "Address"
+      serviceId: "Service ID"
+    tosAndPrivacy: 
+      title: "Terms of use and Privacy"
+      tosLink: "Terms and conditions"
+      privacyLink: "Privacy information"
 serviceDetail:
   fiscalCode: "Organization's fiscal code"
   fiscalCodeAccessibility: "Organization's fiscal code"
